...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: CustomTopBar(
        title: 'Orçamentos',
        showBackButton: false,
        authStore: _authStore,
      ),
      body: SafeArea(
        child: Column(
          children: [
...
                      ),
                      icon: Icon(
                        Icons.add,
                        size: 16.sp,
                        color: const Color(0xFFFFFFFF),
                      ),
                      label: const Text('Novo Orç.'),
                    ),
                  ],
                ),
              ),
            ),

...
